// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup Ellipsis type - Count Snapshot 1`] = `
.c2 {
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  outline: none;
  margin: 0px;
  background-color: #FFFFFF;
  background-image: var(--background-image);
  background-size: cover;
  border-radius: 42%;
}

.c1 {
  position: relative;
  z-index: 0;
}

.c4 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: inherit;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: var(--bezier-avatar-group-size);
  color: var(--txt-black-dark);
}

.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * + * {
  margin-left: var(--bezier-avatar-group-spacing);
}

.c3 {
  padding-right: var(--bezier-avatar-group-ellipsis-mr);
}

.c3.c3 {
  margin-left: var(--bezier-avatar-group-ellipsis-ml);
}

@supports (background:paint(smooth-corners)) {
  .c2 {
    padding: 0px;
    margin: 0px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    border-image-source: var(--background-image);
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 0 transparent;
    --smooth-corners-bg-color: #FFFFFF;
    --smooth-corners-padding: 0;
    --smooth-corners-radius-unit: string;
  }
}

<div
  class="c0"
  role="group"
  style="--bezier-avatar-group-spacing: 4px; --bezier-avatar-group-size: 24px;"
>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Christian Nwamba"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kola Tioluwani"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kent Dodds"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Ryan Florence"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Dan Abrahmov"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Prosper Otemuyiwa"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c3"
    style="--bezier-avatar-group-ellipsis-mr: 5px; --bezier-avatar-group-ellipsis-ml: 4px;"
  >
    <span
      class="c4 c5"
      data-testid="bezier-react-text"
    >
      +1
    </span>
  </div>
</div>
`;

exports[`AvatarGroup Ellipsis type - Icon Snapshot 1`] = `
.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #FFFFFF;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c2 {
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  outline: none;
  margin: 0px;
  background-color: #FFFFFF;
  background-image: var(--background-image);
  background-size: cover;
  border-radius: 42%;
}

.c1 {
  position: relative;
  z-index: 0;
}

.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * + * {
  margin-left: var(--bezier-avatar-group-spacing);
}

.c3 {
  position: relative;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  outline: none;
  margin: 0px;
  background-color: #00000033;
  border-radius: 42%;
}

@supports (background:paint(smooth-corners)) {
  .c2 {
    padding: 0px;
    margin: 0px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    border-image-source: var(--background-image);
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 0 transparent;
    --smooth-corners-bg-color: #FFFFFF;
    --smooth-corners-padding: 0;
    --smooth-corners-radius-unit: string;
  }
}

@supports (background:paint(smooth-corners)) {
  .c4 {
    padding: 0px;
    margin: 0px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 0 transparent;
    --smooth-corners-bg-color: #00000033;
    --smooth-corners-padding: 0;
    --smooth-corners-radius-unit: string;
  }
}

<div
  class="c0"
  role="group"
  style="--bezier-avatar-group-spacing: 4px; --bezier-avatar-group-size: 24px;"
>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Christian Nwamba"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kola Tioluwani"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kent Dodds"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Ryan Florence"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c1"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Dan Abrahmov"
      class="c2"
      data-testid="bezier-react-avatar"
      role="img"
      size="24"
      style="--background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="c3"
    data-testid="bezier-react-avatar-group-ellipsis-icon"
  >
    <div
      class="c4"
    >
      <svg
        class="c5"
        color="bgtxt-absolute-white-dark"
        data-testid="bezier-react-icon"
        fill="none"
        foundation="[object Object]"
        height="16"
        marginbottom="0"
        marginleft="0"
        marginright="0"
        margintop="0"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 12a2.257 2.257 0 0 0 2.25 2.25A2.257 2.257 0 0 0 7 12a2.257 2.257 0 0 0-2.25-2.25A2.257 2.257 0 0 0 2.5 12Zm9.5 2.25A2.257 2.257 0 0 1 9.75 12 2.257 2.257 0 0 1 12 9.75 2.257 2.257 0 0 1 14.25 12 2.257 2.257 0 0 1 12 14.25Zm7.25 0A2.257 2.257 0 0 1 17 12a2.257 2.257 0 0 1 2.25-2.25A2.257 2.257 0 0 1 21.5 12a2.257 2.257 0 0 1-2.25 2.25Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c1"
      data-testid="bezier-react-avatar-wrapper"
    >
      <div
        aria-label="Prosper Otemuyiwa"
        class="c2"
        data-testid="bezier-react-avatar"
        role="img"
        size="24"
        style="--background-image: url(https://www.google.com);"
      />
    </div>
  </div>
</div>
`;
